fix: remove unnecessary overflow-y and update z-index

--- a/src/pages/authenticate/Authenticate.css
+++ b/src/pages/authenticate/Authenticate.css
@@ -22,7 +22,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 10;
+        z-index: 1;
         opacity: 0.8;
         background-position: center center;
         background-size: cover;
@@ -36,8 +36,7 @@
     & .infoContainer {
         width: 62rem;
         min-height: 70rem;
-        z-index: 20;
-        overflow-y: scroll;
+        z-index: 2;
         padding: 2.3rem 5.5rem;
         display: flex;
         flex-direction: column;
