--- a/src/pages/sign/Sign.css
+++ b/src/pages/sign/Sign.css
@@ -25,7 +25,6 @@
         width: 62rem;
         min-height: 70rem;
         z-index: 2;
-        overflow-y: scroll;
         padding: 2.3rem 5.5rem;
         display: flex;
         flex-direction: column;
@@ -59,7 +58,7 @@
         & .codeBlock {
             width: 100%;
             height: 13rem;
-            overflow-y: scroll;
+            overflow-y: auto;
             margin-bottom: 4rem;
             background-color: color(var(--color-black) alpha(0.2));
         }
